// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseForm (no data) 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description (required)"
      required={true}
      type="text"
      value=""
    />
    <br />
    <input
      onChange={[Function]}
      placeholder="Amount (required)"
      required={true}
      type="text"
      value=""
    />
    <br />
    <withStyles(SingleDatePicker)
      block={false}
      customCloseIcon={null}
      customInputIcon={null}
      date={"1970-01-01T00:00:00.000Z"}
      disabled={false}
      enableOutsideDays={false}
      firstDayOfWeek={null}
      focused={false}
      hideKeyboardShortcutsPanel={false}
      horizontalMargin={0}
      initialVisibleMonth={null}
      isOutsideRange={[Function]}
      isRTL={false}
      keepFocusOnInput={false}
      keepOpenOnDateSelect={false}
      navNext={null}
      navPrev={null}
      noBorder={false}
      numberOfMonths={1}
      onDateChange={[Function]}
      onFocusChange={[Function]}
      readOnly={false}
      regular={false}
      renderCalendarInfo={null}
      renderDayContents={null}
      renderMonth={null}
      reopenPickerOnClearDate={false}
      required={false}
      screenReaderInputMessage=""
      showClearDate={false}
      showDefaultInputIcon={false}
      small={false}
      verticalHeight={null}
      withFullScreenPortal={false}
      withPortal={false}
    />
    <br />
    <textarea
      cols="40"
      id=""
      name="notes"
      onChange={[Function]}
      placeholder="Additional Notes (optional)"
      rows="3"
      value=""
    />
    <br />
    <button />
  </form>
</div>
`;

exports[`should render ExpenseForm with expense data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description (required)"
      required={true}
      type="text"
      value="item 1 - abc"
    />
    <br />
    <input
      onChange={[Function]}
      placeholder="Amount (required)"
      required={true}
      type="text"
      value="7.00"
    />
    <br />
    <withStyles(SingleDatePicker)
      block={false}
      customCloseIcon={null}
      customInputIcon={null}
      date={"2017-04-01T16:00:00.000Z"}
      disabled={false}
      enableOutsideDays={false}
      firstDayOfWeek={null}
      focused={false}
      hideKeyboardShortcutsPanel={false}
      horizontalMargin={0}
      initialVisibleMonth={null}
      isOutsideRange={[Function]}
      isRTL={false}
      keepFocusOnInput={false}
      keepOpenOnDateSelect={false}
      navNext={null}
      navPrev={null}
      noBorder={false}
      numberOfMonths={1}
      onDateChange={[Function]}
      onFocusChange={[Function]}
      readOnly={false}
      regular={false}
      renderCalendarInfo={null}
      renderDayContents={null}
      renderMonth={null}
      reopenPickerOnClearDate={false}
      required={false}
      screenReaderInputMessage=""
      showClearDate={false}
      showDefaultInputIcon={false}
      small={false}
      verticalHeight={null}
      withFullScreenPortal={false}
      withPortal={false}
    />
    <br />
    <textarea
      cols="40"
      id=""
      name="notes"
      onChange={[Function]}
      placeholder="Additional Notes (optional)"
      rows="3"
      value="lowest amount, middle date"
    />
    <br />
    <button />
  </form>
</div>
`;

exports[`should render error for invalid form data in ExpenseForm 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description (required)"
      required={true}
      type="text"
      value=""
    />
    <br />
    <input
      onChange={[Function]}
      placeholder="Amount (required)"
      required={true}
      type="text"
      value=""
    />
    <br />
    <withStyles(SingleDatePicker)
      block={false}
      customCloseIcon={null}
      customInputIcon={null}
      date={"1970-01-01T00:00:00.000Z"}
      disabled={false}
      enableOutsideDays={false}
      firstDayOfWeek={null}
      focused={false}
      hideKeyboardShortcutsPanel={false}
      horizontalMargin={0}
      initialVisibleMonth={null}
      isOutsideRange={[Function]}
      isRTL={false}
      keepFocusOnInput={false}
      keepOpenOnDateSelect={false}
      navNext={null}
      navPrev={null}
      noBorder={false}
      numberOfMonths={1}
      onDateChange={[Function]}
      onFocusChange={[Function]}
      readOnly={false}
      regular={false}
      renderCalendarInfo={null}
      renderDayContents={null}
      renderMonth={null}
      reopenPickerOnClearDate={false}
      required={false}
      screenReaderInputMessage=""
      showClearDate={false}
      showDefaultInputIcon={false}
      small={false}
      verticalHeight={null}
      withFullScreenPortal={false}
      withPortal={false}
    />
    <br />
    <textarea
      cols="40"
      id=""
      name="notes"
      onChange={[Function]}
      placeholder="Additional Notes (optional)"
      rows="3"
      value=""
    />
    <br />
    <button />
  </form>
</div>
`;

exports[`should render error for invalid form data in ExpenseForm 2`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description (required)"
      required={true}
      type="text"
      value=""
    />
    <br />
    <input
      onChange={[Function]}
      placeholder="Amount (required)"
      required={true}
      type="text"
      value=""
    />
    <br />
    <withStyles(SingleDatePicker)
      block={false}
      customCloseIcon={null}
      customInputIcon={null}
      date={"1970-01-01T00:00:00.000Z"}
      disabled={false}
      enableOutsideDays={false}
      firstDayOfWeek={null}
      focused={false}
      hideKeyboardShortcutsPanel={false}
      horizontalMargin={0}
      initialVisibleMonth={null}
      isOutsideRange={[Function]}
      isRTL={false}
      keepFocusOnInput={false}
      keepOpenOnDateSelect={false}
      navNext={null}
      navPrev={null}
      noBorder={false}
      numberOfMonths={1}
      onDateChange={[Function]}
      onFocusChange={[Function]}
      readOnly={false}
      regular={false}
      renderCalendarInfo={null}
      renderDayContents={null}
      renderMonth={null}
      reopenPickerOnClearDate={false}
      required={false}
      screenReaderInputMessage=""
      showClearDate={false}
      showDefaultInputIcon={false}
      small={false}
      verticalHeight={null}
      withFullScreenPortal={false}
      withPortal={false}
    />
    <br />
    <textarea
      cols="40"
      id=""
      name="notes"
      onChange={[Function]}
      placeholder="Additional Notes (optional)"
      rows="3"
      value=""
    />
    <br />
    <button />
    <p
      className="error-text"
    >
      Please enter a description
    </p>
  </form>
</div>
`;
